
Check out [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=11349]this[/url] program also. It's for graphical modding.

For editing language files in The Conquerors,
I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2021.7.19[/b]:
-Added hero glow sprite for units.
-Fixed display angle in SLP view.
-Faster erasure of multiple items from lists.

Version [b]2021.5.9[/b]:
-Updated technology effect attribute list for DE2.
-Updated armor list defaults for DE2.
-Fixed multiple bugs in units and terrain restrictions tabs.
-Added additional folder for loading modded sprite files.
-Prevented AGE windows from spawning beyond observable desktop.
-Fixed fresh bug in SLP view close handler.

Version [b]2021.4.25[/b]:
-Fixed more bugs in effects tab including inability to type in negative armor and attack values for UP and DE2.
-Show all angles of DE sprites.
-Fixed targeting with mouse.

Version [b]2021.4.18[/b]:
-Scroll rate of tabs can be adjusted in options.
-Window no longer spawns larger than screen space.

Version [b]2021.4.11[/b]:
-Age of Empires DE SLP shadows displayed.
-Sprite cache based on memory used instead of sprite count.

Version [b]2021.4.4[/b]:
-Fixed crash when no palettes were loaded.
-Made SLP view update more reliably.
-Smoother scrolling.
-Improvements for high display scaling.

Version [b]2021.4.2[/b]:
-Added SMX reading support.
-Fixed reading Age of Empires DE SLP files.
-DE palette paths are saved in recent list.
-Improved reading of palettes.
-Fixed some rare crashes when switching data files.

Version [b]2021.3.22[/b]:
-Fixed several bugs in effects tab.
-Reduced lag when dragging main window.
-Stopped old recent paths from opening as wrong version.

Version [b]2021.3.15[/b]:
-Updated effects tab for UserPatch 1.5.
-More accurate text input error messages.
