@@ -13,6 +13,9 @@ I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2021.7.25[/b]:
+-Restored modifiers for strings, /+ with text to append, and /- with integer to shorten the strings.
+
 Version [b]2021.7.19[/b]:
 -Added hero glow sprite for units.
 -Fixed display angle in SLP view.
